apps/base/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  labels:
    app.kubernetes.io/name: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: overseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: overseerr
    spec:
      serviceAccountName: overseerr
      automountServiceAccountToken: true
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      podSecurityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      securityContext:
        allowPrivilegeEscalation: false
        capabilities:
          drop:
            - ALL
        readOnlyRootFilesystem: false
        runAsNonRoot: true
        privileged: false
        # fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: overseerr
        image: ghcr.io/seerr-team/seerr:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 5055
          protocol: TCP
        volumeMounts:
        - name: data
          mountPath: /app/config
          subPath: config
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: overseerr-claim
