apps/base/overseerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  namespace: overseerr
  labels:
    app.kubernetes.io/name: overseerr
  annotations:
spec:
  type: ClusterIP
  ports:
  - port: 5055
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: overseerr
