apps/base/overseerr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  namespace: overseerr
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`overseerr.cruznet.io`)
    kind: Rule
    services:
    - name: overseerr
      kind: Service
      port: 5055
  tls:
    secretName: overseerr-cert
